Fix OR group css

--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -124,3 +124,6 @@ $ssc-picker-height: 150px;
         padding-bottom: 0;
     }
 }
+.MuiAutocomplete-popper .MuiAutocomplete-groupLabel{
+    line-height: 26px;
+}
