--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -212,3 +212,6 @@ $ssc-picker-height: 150px;
     top: 26px;
     left: 40px;
 }
+.MuiAutocomplete-popper .MuiAutocomplete-groupLabel{
+    line-height: 26px;
+}
