--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -3,6 +3,20 @@
 $video-height: 625px;
 $sidebar-width: 250px;
 
+.Surgical-Procedure-Tabs {
+  .Surgical-Procedure-Tab {
+    font-size: 14px;
+    opacity: 0.8;
+    background: #fff;
+    padding: 8px 16px;
+    cursor: pointer;
+    &.selected {
+      font-weight: bold;
+      border-bottom: 5px solid #028CC8;
+    }
+  }
+}
+
 .Emm-Phase-Video-Container {
   .highlighted {
     background: #D8F0F9;
