https://surgicalsafety.atlassian.net/browse/INEFF-59 fix OR name translation

--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -28,6 +28,10 @@ $ssc-picker-height: 150px;
             line-height: 24px;
             text-align: center;
         }
+        .bar-chart .display-text{
+            margin: 148px 0;
+            font-style: unset;
+        }
     }
     .TurnoverTimeReport {
         .efficiency-card.InfographicText {
