https://surgicalsafety.atlassian.net/browse/INEFF-92 Add 1 pager infographic for Efficiency

--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -189,7 +189,7 @@ a hr { border-bottom: none; }
 }
 
 .link{
-  color: #4EA1DA;
+  color: #028cc8;
   font-size: 14px;
   letter-spacing: 0;
   line-height: 19px;
