--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -6,7 +6,7 @@ $ssc-picker-height: 150px;
     background-color: #f5f5f5;
     height: calc(100%);
     .MuiCardContent-root {
-        padding: 24px;
+        padding: 24px 40px;
     }
     .efficiency-card.InfographicText {
         max-width: fit-content;
@@ -28,7 +28,7 @@ $ssc-picker-height: 150px;
             line-height: 24px;
             text-align: center;
         }
-        .bar-chart .display-text{
+        .bar-chart .display-text {
             margin: 148px 0;
             font-style: unset;
         }
@@ -141,4 +141,55 @@ $ssc-picker-height: 150px;
 }
 .MuiAutocomplete-popper .MuiAutocomplete-groupLabel {
     line-height: 26px;
+}
+.efficiencyOnBoarding.Modal {
+    padding: 0;
+}
+.efficiencyOnboard-link {
+    position: absolute;
+    top: 30px;
+    left: 40px;
+}
+.efficiencyOnBoarding {
+    
+    color: #000;
+    font-family: "Noto Sans";
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 800px;
+    .efficiencyOnBoard-title {
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;
+        padding: 40px 40px 0 40px;
+        margin-bottom: 29px;
+    }
+    .efficiencyOnBoard-column{
+        padding: 0 0 0 40px;
+    }
+    .efficiencyOnBoard-paragraph {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 24px;
+    }
+    .efficiencyOnBoard-segment {
+        margin-left: 60px;
+        margin-bottom: 24px;
+        background-color: #e6e6e6;
+        padding: 16px;
+    }
+    .efficiencyOnBoard-subtitle {
+        font-weight: bold;
+    }
+    .efficiency-OnBoard-box{
+        color: #004f6e;
+        text-align: center;
+        max-width: 116px;
+        padding: 2px;
+    }
+    .efficiency-OnBoard-box div {
+        background-color: #CCEAE6;
+        padding: 12px;
+    }
 }
