--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -1,55 +1,55 @@
-@import '../../styles/global-styles.scss';
+@import "../../styles/global-styles.scss";
 
 $ssc-picker-height: 150px;
 
-.ssc-page{
-    background-color: #F5F5F5;
+.ssc-page {
+    background-color: #f5f5f5;
     height: calc(100%);
 }
-.ssc-page .overlay{
+.ssc-page .overlay {
     top: $ssc-picker-height;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
 }
 
 .ssc-page .next,
-.ssc-page .previous{
+.ssc-page .previous {
     font-size: 14px;
     line-height: 19px;
 }
 
-.ssc-page .cases-date input{
+.ssc-page .cases-date input {
     font-size: 26px;
     line-height: 36px;
 }
 
 .ssc-divider {
-    background-color: #C8C8C8;
+    background-color: #c8c8c8;
 }
 .ssc-picker {
-    background-color: #E8E8E8;
+    background-color: #e8e8e8;
     padding: 16px;
 }
 
-.ssc-card.MuiCard-root{
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+.ssc-card.MuiCard-root {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
     border-radius: 8px !important;
 }
-.ssc-card.InfographicText .MuiCardContent-root{
+.ssc-card.InfographicText .MuiCardContent-root {
     margin: 0;
     padding: 24px 16px;
 }
-.ssc-card .MuiCardContent-root{
+.ssc-card .MuiCardContent-root {
     margin: 0;
     padding: 24px;
 }
 .ssc-card.BarChartDetailed .MuiCardContent-root,
 .ssc-card.List .MuiCardContent-root,
-.ssc-card.BarChart .MuiCardContent-root{
+.ssc-card.BarChart .MuiCardContent-root {
     padding: 24px 40px;
 }
 
 .ssc-card.InfographicParagraph .MuiCardContent-root,
-.ssc-card.MuiCard-root.InfographicParagraph{
+.ssc-card.MuiCard-root.InfographicParagraph {
     box-shadow: none;
     background-color: unset;
     padding-left: 0;
@@ -61,17 +61,17 @@ $ssc-picker-height: 150px;
     font-size: 26px;
     letter-spacing: 0;
     line-height: 36px;
-  }
-.ssc-card .InfographicText{
+}
+.ssc-card .InfographicText {
     display: flex;
     align-items: center;
 }
-.ssc-picker-container{
+.ssc-picker-container {
     position: absolute;
     width: calc(100% - #{$nav-width});
     z-index: 1300;
 }
-.ssc-main{
+.ssc-main {
     padding: 40px;
     max-width: 1198px;
     margin: auto;
@@ -79,15 +79,14 @@ $ssc-picker-height: 150px;
     // position: relative;
 }
 
-
-.ssc-message{
-  font-family: "Noto Sans";
-  font-size: 26px;
-  letter-spacing: 0;
-  line-height: 36px;
-  text-align: center;
+.ssc-message {
+    font-family: "Noto Sans";
+    font-size: 26px;
+    letter-spacing: 0;
+    line-height: 36px;
+    text-align: center;
 }
-.ssc-message-subtitle{
+.ssc-message-subtitle {
     font-family: "Noto Sans";
     font-size: 18px;
     letter-spacing: 0;
@@ -95,123 +94,122 @@ $ssc-picker-height: 150px;
     text-align: center;
 }
 
-.chart-title{
+.chart-title {
     font-size: 26px;
     letter-spacing: 0;
     line-height: 36px;
 }
 
 .sscOnboarding.Modal,
-.ssc.Modal{
+.ssc.Modal {
     padding: 0;
 }
 
-
 .no-data {
-  opacity: 0.8;
-  color: #000000;
-  font-family: "Noto Sans";
-  font-size: 18px;
-  letter-spacing: 0;
-  line-height: 24px;
-  text-align: center;
-  margin-top: 16px;
-  margin-bottom: 8px;
-}
-  
-.no-data-subtitle {
-  opacity: 0.8;
-  color: #000000;
-  font-family: "Noto Sans";
-  font-size: 14px;
-  letter-spacing: 0;
-  line-height: 19px;
-  text-align: center;
-  margin-bottom: 24px;
-}
-
-.sscOnboarding .sscOnboard-title{
-    font-size: 26px;
-    letter-spacing: 0;
-    line-height: 36px;
-    padding: 40px 40px 0 40px;
-    margin-bottom: 29px;
-}
-.sscOnboarding {    
-  color: #000000;
-  font-family: "Noto Sans";
-  font-size: 14px;
-  letter-spacing: 0;
-  line-height: 19px;
-  max-width: 800px;
-}
-.sscOnboarding .sscOnboard-paragraph{
-    padding: 0 0 0 40px;
-    display: flex;
-    flex-direction: column;
-}
-.sscOnboarding .sscOnboard-paragraph-block1{
-    margin-bottom: 24px;
-}
-.sscOnboarding .sscOnboard-paragraph-block2{
-    margin-bottom: 40px;
-}
-.sscOnboard-report-title{
+    opacity: 0.8;
+    color: #000000;
+    font-family: "Noto Sans";
     font-size: 18px;
+    letter-spacing: 0;
     line-height: 24px;
-    font-weight: bold;
-}
-.ssc-Onboard-report-info:not(:last-child){
-    margin-bottom: 24px;
-}
-.ssc-Onboard-report-info{
-    color:#004F6E;
+    text-align: center;
+    margin-top: 16px;
+    margin-bottom: 8px;
 }
 
-.ssc-Onboard-report-info.Compliance .sscOnboard-report-title,
-.ssc-Onboard-report-info.Compliance .sscOnboard-hex{
-    color: #477B78;
-}
-.ssc-Onboard-report-info.Engagement .sscOnboard-report-title,
-.ssc-Onboard-report-info.Engagement .sscOnboard-hex{
-    color: #476A7C;
-}
-.ssc-Onboard-report-info.Quality .sscOnboard-report-title,
-.ssc-Onboard-report-info.Quality .sscOnboard-hex{
-    color: #736545;
-}
-.sscOnboard-segment{
-    margin-left: 100px;
-    margin-bottom: 24px;
-    background-color: #E6E6E6;
-    padding:16px;
-}
-.sscOnboard-subtitle{
-    font-weight: bold;
-}
-.sscOnboard-image{
+.no-data-subtitle {
+    opacity: 0.8;
+    color: #000000;
+    font-family: "Noto Sans";
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 19px;
     text-align: center;
+    margin-bottom: 24px;
 }
-.sscOnboard-image img{
-    max-height: 300px;
+
+.sscOnboarding {
+    color: #000000;
+    font-family: "Noto Sans";
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 800px;
+    .sscOnboard-title {
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;
+        padding: 40px 40px 0 40px;
+        margin-bottom: 29px;
+    }
+    .sscOnboard-paragraph {
+        padding: 0 0 0 40px;
+        display: flex;
+        flex-direction: column;
+    }
+    .sscOnboard-paragraph-block1 {
+        margin-bottom: 24px;
+    }
+    .sscOnboard-paragraph-block2 {
+        margin-bottom: 40px;
+    }
+    .sscOnboard-report-title {
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: bold;
+    }
+    .ssc-Onboard-report-info:not(:last-child) {
+        margin-bottom: 24px;
+    }
+    .ssc-Onboard-report-info {
+        color: #004f6e;
+    }
+    .ssc-Onboard-report-info.Compliance .sscOnboard-report-title,
+    .ssc-Onboard-report-info.Compliance .sscOnboard-hex {
+        color: #477b78;
+    }
+    .ssc-Onboard-report-info.Engagement .sscOnboard-report-title,
+    .ssc-Onboard-report-info.Engagement .sscOnboard-hex {
+        color: #476a7c;
+    }
+    .ssc-Onboard-report-info.Quality .sscOnboard-report-title,
+    .ssc-Onboard-report-info.Quality .sscOnboard-hex {
+        color: #736545;
+    }
+    .sscOnboard-segment {
+        margin-left: 100px;
+        margin-bottom: 24px;
+        background-color: #e6e6e6;
+        padding: 16px;
+    }
+    .sscOnboard-subtitle {
+        font-weight: bold;
+    }
+    .sscOnboard-image {
+        text-align: center;
+    }
+    .sscOnboard-image img {
+        max-height: 300px;
+    }
+    .close-button {
+        padding-top: 0;
+    }
+    .close-button:hover {
+        background-color: unset;
+    }
+    .sscOnboard-hex {
+        display: inline-block;
+        font-size: 20px;
+        margin-right: 4px;
+        transform: translate(2px, 2px) rotate(90deg);
+    }
+    
 }
-.sscOnboarding .close-button{
-    padding-top: 0;
-}
-.sscOnboarding .close-button:hover{
-    background-color: unset;
-  }
-.sscOnboard-hex{
-    display: inline-block;
-    font-size: 20px;
-    margin-right: 4px;    
-    transform: translate(2px,2px) rotate(90deg);
-}
-.sscOnboard-link{
+.sscOnboard-link {
     position: absolute;
     top: 26px;
     left: 40px;
 }
-.MuiAutocomplete-popper .MuiAutocomplete-groupLabel{
+.MuiAutocomplete-popper .MuiAutocomplete-groupLabel {
     line-height: 26px;
 }
