--- a/app/components/Report/DetailedMultiLineChart/style.scss
+++ b/app/components/Report/DetailedMultiLineChart/style.scss
@@ -39,7 +39,7 @@
         font-size: 26px;
         letter-spacing: 0;
         line-height: 26px;
-        text-align: center;
+        text-align: right;
     }
     .row-score-title {
         opacity: 0.8;
