--- a/app/components/Report/DetailedMultiLineChart/style.scss
+++ b/app/components/Report/DetailedMultiLineChart/style.scss
@@ -56,4 +56,13 @@
         r:1;
         stroke: unset !important;
     }
+    .display-text {
+        color: #004f6e;
+        font-family: "Noto Sans";
+        font-size: 18px;
+        letter-spacing: 0;
+        line-height: 24px;
+        text-align: center;
+        margin: 136px 0;
+      }
 }
