Change specialty/procedure API

--- a/app/containers/RequestEMM/style.scss
+++ b/app/containers/RequestEMM/style.scss
@@ -1,5 +1,11 @@
 @import '../../styles/global-styles.scss';
 
+.request-emm-page{
+    .ap-field.NA .MuiSelect-root {
+        opacity: .6;
+    }
+}
+
 .input {
     display: flex;
 }
