--- a/app/components/Report/BarChartDetailed/style.scss
+++ b/app/components/Report/BarChartDetailed/style.scss
@@ -1,27 +1,29 @@
 @import '../../../styles/global-styles';
 
-.bar-chart-detailed .chart-title{
-  font-size: 26px;
-  letter-spacing: 0;
-  line-height: 36px;
-  margin-bottom: 16px !important;
-}
-
-.chart-subtitle{
-  font-size: 14px;
-  font-style: italic;
-  letter-spacing: 0;
-  line-height: 19px;
-  margin-bottom: 32px;
-}
-.chart-score{
-  color: #005979;
-  font-family: "Noto Sans";
-  font-size: 18px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 24px;
-  text-align: right;
+.bar-chart-detailed{
+  .chart-title{
+    font-size: 26px;
+    letter-spacing: 0;
+    line-height: 36px;
+    margin-bottom: 16px !important;
+  }
+  
+  .chart-subtitle{
+    font-size: 14px;
+    font-style: italic;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 32px;
+  }
+  .chart-score{
+    color: #005979;
+    font-family: "Noto Sans";
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 24px;
+    text-align: right;
+  }
 }
 
 .bar-chart-detailed .link{
