--- a/app/components/Report/DetailedMultiLineChart/style.scss
+++ b/app/components/Report/DetailedMultiLineChart/style.scss
@@ -8,7 +8,15 @@
         font-size: 26px;
         letter-spacing: 0;
         line-height: 36px;
+        
+    }
+    .chart-subtitle {
+        font-size: 14px;
+        font-style: italic;
+        letter-spacing: 0;
+        line-height: 19px;
         margin-bottom: 40px;
+        text-align: center;
     }
     .row-divider {
         height: 1px;
@@ -53,7 +61,7 @@
         stroke-width: 2px;
     }
     circle {
-        r:1;
+        r: 1;
         stroke: unset !important;
     }
     .display-text {
@@ -64,5 +72,5 @@
         line-height: 24px;
         text-align: center;
         margin: 136px 0;
-      }
+    }
 }
