--- a/app/components/Report/StackedBarChart/style.scss
+++ b/app/components/Report/StackedBarChart/style.scss
@@ -1,27 +1,29 @@
 @import '../../../styles/global-styles';
 
-.stacked-barchart-detailed .chart-title{
-  font-family: "Noto Sans";
-  font-size: 18px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 24px;
-}
-.chart-subtitle{
-  font-size: 14px;
-  font-style: italic;
-  letter-spacing: 0;
-  line-height: 19px;
-  margin-bottom: 32px;
-}
-.chart-score{
-  color: #005979;
-  font-family: "Noto Sans";
-  font-size: 18px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 24px;
-  text-align: right;
+.stacked-barchart-detailed {
+  .chart-title{
+    font-family: "Noto Sans";
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 24px;
+  }
+  .chart-subtitle{
+    font-size: 14px;
+    font-style: italic;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 32px;
+  }
+  .chart-score{
+    color: #005979;
+    font-family: "Noto Sans";
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 24px;
+    text-align: right;
+  }
 }
 
 .stacked-barchart-detailed .link{
