--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -5,127 +5,132 @@ $ssc-picker-height: 150px;
 .ssc-page {
     background-color: #f5f5f5;
     height: calc(100%);
-}
-.ssc-page .overlay {
-    top: $ssc-picker-height;
-    background-color: #f5f5f5;
-}
+    .overlay {
+        top: $ssc-picker-height;
+        background-color: #f5f5f5;
+    }
+    .next,
+    .previous {
+        font-size: 14px;
+        line-height: 19px;
+    }
+    .cases-date input {
+        font-size: 26px;
+        line-height: 36px;
+    }
+    
+    .ssc-divider {
+        background-color: #c8c8c8;
+    }
+    .ssc-picker {
+        background-color: #e8e8e8;
+        padding: 16px;
+    }
+    .ssc-card.MuiCard-root {
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+        border-radius: 8px !important;
+    }
+    .ssc-card.ssc-card.BarChart{
+        .chart-title{
+            margin-bottom: 16px;
+        }
+        .chart-subtitle{
+            display: none;
+        }
+    }
 
-.ssc-page .next,
-.ssc-page .previous {
-    font-size: 14px;
-    line-height: 19px;
-}
-
-.ssc-page .cases-date input {
-    font-size: 26px;
-    line-height: 36px;
-}
-
-.ssc-divider {
-    background-color: #c8c8c8;
-}
-.ssc-picker {
-    background-color: #e8e8e8;
-    padding: 16px;
-}
-
-.ssc-card.MuiCard-root {
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 8px !important;
-}
-.ssc-card.InfographicText .MuiCardContent-root {
-    margin: 0;
-    padding: 24px 16px;
-}
-.ssc-card .MuiCardContent-root {
-    margin: 0;
-    padding: 24px;
-}
-.ssc-card.BarChartDetailed .MuiCardContent-root,
-.ssc-card.List .MuiCardContent-root,
-.ssc-card.BarChart .MuiCardContent-root {
-    padding: 24px 40px;
-}
-
-.ssc-card.InfographicParagraph .MuiCardContent-root,
-.ssc-card.MuiCard-root.InfographicParagraph {
-    box-shadow: none;
-    background-color: unset;
-    padding-left: 0;
-}
-.ssc-card.InfographicMessage {
-    opacity: 0.8;
-    color: #000000;
-    font-family: "Noto Sans";
-    font-size: 26px;
-    letter-spacing: 0;
-    line-height: 36px;
-}
-.ssc-card .InfographicText {
-    display: flex;
-    align-items: center;
-}
-.ssc-picker-container {
-    position: absolute;
-    width: calc(100% - #{$nav-width});
-    z-index: 1300;
-}
-.ssc-main {
-    padding: 40px;
-    max-width: 1198px;
-    margin: auto;
-    top: $ssc-picker-height;
-    // position: relative;
-}
-
-.ssc-message {
-    font-family: "Noto Sans";
-    font-size: 26px;
-    letter-spacing: 0;
-    line-height: 36px;
-    text-align: center;
-}
-.ssc-message-subtitle {
-    font-family: "Noto Sans";
-    font-size: 18px;
-    letter-spacing: 0;
-    line-height: 24px;
-    text-align: center;
-}
-
-.chart-title {
-    font-size: 26px;
-    letter-spacing: 0;
-    line-height: 36px;
-}
-
-.sscOnboarding.Modal,
-.ssc.Modal {
-    padding: 0;
-}
-
-.no-data {
-    opacity: 0.8;
-    color: #000000;
-    font-family: "Noto Sans";
-    font-size: 18px;
-    letter-spacing: 0;
-    line-height: 24px;
-    text-align: center;
-    margin-top: 16px;
-    margin-bottom: 8px;
-}
-
-.no-data-subtitle {
-    opacity: 0.8;
-    color: #000000;
-    font-family: "Noto Sans";
-    font-size: 14px;
-    letter-spacing: 0;
-    line-height: 19px;
-    text-align: center;
-    margin-bottom: 24px;
+    .ssc-card.InfographicText .MuiCardContent-root {
+        margin: 0;
+        padding: 24px 16px;
+    }
+    .ssc-card .MuiCardContent-root {
+        margin: 0;
+        padding: 24px;
+    }
+    .ssc-card.BarChartDetailed .MuiCardContent-root,
+    .ssc-card.List .MuiCardContent-root,
+    .ssc-card.BarChart .MuiCardContent-root {
+        padding: 24px 40px;
+    }
+    
+    .ssc-card.InfographicParagraph .MuiCardContent-root,
+    .ssc-card.MuiCard-root.InfographicParagraph {
+        box-shadow: none;
+        background-color: unset;
+        padding-left: 0;
+    }
+    .ssc-card.InfographicMessage {
+        opacity: 0.8;
+        color: #000000;
+        font-family: "Noto Sans";
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;
+    }
+    .ssc-card .InfographicText {
+        display: flex;
+        align-items: center;
+    }
+    .ssc-picker-container {
+        position: absolute;
+        width: calc(100% - #{$nav-width});
+        z-index: 1300;
+    }
+    .ssc-main {
+        padding: 40px;
+        max-width: 1198px;
+        margin: auto;
+        top: $ssc-picker-height;
+        // position: relative;
+    }
+    .ssc-message {
+        font-family: "Noto Sans";
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;
+        text-align: center;
+    }
+    .ssc-message-subtitle {
+        font-family: "Noto Sans";
+        font-size: 18px;
+        letter-spacing: 0;
+        line-height: 24px;
+        text-align: center;
+    }
+    
+    .ssc-chart-title {
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;
+    }
+    
+    .sscOnboarding.Modal,
+    .ssc.Modal {
+        padding: 0;
+    }
+    
+    .no-data {
+        opacity: 0.8;
+        color: #000000;
+        font-family: "Noto Sans";
+        font-size: 18px;
+        letter-spacing: 0;
+        line-height: 24px;
+        text-align: center;
+        margin-top: 16px;
+        margin-bottom: 8px;
+    }
+    
+    .no-data-subtitle {
+        opacity: 0.8;
+        color: #000000;
+        font-family: "Noto Sans";
+        font-size: 14px;
+        letter-spacing: 0;
+        line-height: 19px;
+        text-align: center;
+        margin-bottom: 24px;
+    }
 }
 
 .sscOnboarding {
