https://surgicalsafety.atlassian.net/browse/INEFF-109 update OR Util tile for Landing page

--- a/app/components/Report/DetailedMultiLineChart/style.scss
+++ b/app/components/Report/DetailedMultiLineChart/style.scss
@@ -18,6 +18,9 @@
         margin-bottom: 40px;
         text-align: center;
     }
+    .sub-chart-container{
+        min-height: 295px;
+    }
     .row-divider {
         height: 1px;
         width: 200px;
