--- a/app/components/Report/DonutChart/style.scss
+++ b/app/components/Report/DonutChart/style.scss
@@ -57,6 +57,18 @@
     font-size: 32px;
     line-height: 0;
   }
+  .tooltip{
+    color: #fff;
+    padding: 16px;
+    font-size: 14px;
+    max-width: 300px;
+    word-wrap: break-word;
+    font-family: "Noto Sans";
+    font-weight: 500 !important;
+    line-height: 19px;
+    border-radius: 4px;
+    background-color: rgba(97, 97, 97, 0.9);
+  }
 }
 .c3-arc-NA{
   fill: #F3F3F3 !important;
