--- a/app/containers/NoAccess/style.scss
+++ b/app/containers/NoAccess/style.scss
@@ -14,6 +14,7 @@
     width: 120px;
     background-color: #C8C8C8;
     margin:auto;
+    margin-top:9px;
     margin-bottom: 24px;
   }
   .content {
