https://surgicalsafety.atlassian.net/browse/INGEN-5 Temporarily replace Dashboard with Welcome

--- a/app/containers/NoAccess/style.scss
+++ b/app/containers/NoAccess/style.scss
@@ -1,9 +1,11 @@
 .no-access {
   text-align: center;
-  padding: 40px;
-  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
   .title {
-    color: #004F6E;
+    color: #004f6e;
     font-family: "Noto Sans";
     font-size: 26px;
     letter-spacing: 0;
@@ -12,9 +14,9 @@
   .title-break {
     height: 1px;
     width: 120px;
-    background-color: #C8C8C8;
-    margin:auto;
-    margin-top:8px;
+    background-color: #c8c8c8;
+    margin: auto;
+    margin-top: 8px;
     margin-bottom: 24px;
   }
   .content {
