--- a/app/components/Report/BarChartDetailed/style.scss
+++ b/app/components/Report/BarChartDetailed/style.scss
@@ -101,5 +101,8 @@
     border-radius: 4px;
     background-color: rgba(97, 97, 97, 0.9);
   }
+  .c3-axis-x .tick{
+    font-weight: bold;
+  }
 }
 
