--- a/app/components/Report/StackedBarChart/style.scss
+++ b/app/components/Report/StackedBarChart/style.scss
@@ -63,7 +63,9 @@
     display: flex;
     margin-top: 32px;
     flex-direction: column;
-    margin-left: 16px;
+    margin-left: 8px;
+    margin-right: 40px;
+    text-align: left;
   }
   .legend-title{
     display: flex;
