https://surgicalsafety.atlassian.net/browse/INGEN-22 Update modal for optional phases quality score

--- a/app/components/Report/ChecklistDetail/style.scss
+++ b/app/components/Report/ChecklistDetail/style.scss
@@ -110,3 +110,9 @@
 .checklistdetail .close-button:hover{
   background-color: unset;
 }
+.max-width-1{
+  max-width: 600px;
+}
+.max-width-2{
+  max-width: 692px;
+}
