https://surgicalsafety.atlassian.net/browse/INGEN-26 adjust start date to earliest

--- a/app/containers/EMMPublish/style.scss
+++ b/app/containers/EMMPublish/style.scss
@@ -1,8 +1,10 @@
 @import '../../styles/global-styles.scss';
-
-.pad {
-    padding: 0 16px;
+.emm-publish-page{
+    .pad {
+        padding: 0 16px;
+    }
 }
+
 
 .emm-publish-page .MuiPaper-elevation2 {
     box-shadow: none;
