https://surgicalsafety.atlassian.net/browse/INSSC-198 update front end

--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -20,7 +20,7 @@ $ssc-picker-height: 150px;
     }
     .QualityScoreReport{
         .BarChart {
-            padding: 0 40px;
+            padding: 0 80px 0 0;
             .chart-title{
                 font-family: "Noto Sans";
                 font-size: 18px;
