--- a/app/containers/EMMCases/style.scss
+++ b/app/containers/EMMCases/style.scss
@@ -19,6 +19,10 @@
         line-height: 19px;
         opacity: 0.8;
     }
+    
+    .input-field {
+        margin-bottom: 32px !important;
+    }
     .search,
     .header,
     .page-search,
