--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -90,24 +90,18 @@ $onboardwidth: 875px;
     text-align: center;
     font-size: 18px;
     color: $white;
-    &.safari-warning {
-        height: 80px;
-        text-align: left;
-        line-height: 22px;
-        padding: 16px;
-    }
 }
 
 .EMM-REPORTS {
     padding: 24px 40px;
-    max-width: 1440px;
     margin: 0px auto;
     overflow-y: auto;
     font-size: 18px;
-    &.safari-banner {
-        height: calc(100% - 80px);
+    .EMM-REPORTS-WRAPPER {
+        max-width: 1440px;
+        margin: 0px auto;
     }
-    &.presenter-banner {
+    &.banner-present {
         height: calc(100% - 40px);
     }
     .close-emm {
