scope user management popup change

--- a/app/containers/UserManagement/style.scss
+++ b/app/containers/UserManagement/style.scss
@@ -20,6 +20,6 @@
 .Modal .link:hover{
     text-decoration: none;
 }
-.MuiDialogContent-root {
+.user-modal .MuiDialogContent-root {
     padding: 0 !important;
 }
