Fix datepicker months not selectable

--- a/app/components/Report/Table/style.scss
+++ b/app/components/Report/Table/style.scss
@@ -1,4 +1,7 @@
 @import '../../../styles/global-styles';
+.table-main .MuiTableCell-root{
+  z-index: 0 !important;
+}
 .table-main.empty {
   
   .MuiTableCell-root.MuiTableCell-body{
