remove constants - adjust stylings

--- a/app/containers/EMMReports/EMMOverview/style.scss
+++ b/app/containers/EMMReports/EMMOverview/style.scss
@@ -39,7 +39,7 @@ $paddingSize: 24px;
     background-color: #c8c8c8;
   }
   .HL7-unavailable{
-    padding: 34px !important;
+    padding: 24px 34px 34px !important;
   }
 
   .Score-Speedometer {
