--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -24,6 +24,7 @@ $sidebar-width: 250px;
 
   .phase-video {
     width: calc(100% - #{$sidebar-width});
+    position: relative;
     .azuremediaplayer {
       width: 100%;
       height: $video-height;
