Fix styling complaints

--- a/app/containers/EMMReports/EMMOverview/style.scss
+++ b/app/containers/EMMReports/EMMOverview/style.scss
@@ -8,6 +8,7 @@ $paddingSize: 24px;
     font-size: 26px;
     line-height: 36px;
     color: #004f6e;
+    margin-bottom: 8px;
   }
   .EMM-Overview-Subtitle {
     font-size: 18px;
@@ -18,6 +19,10 @@ $paddingSize: 24px;
 }
 
 .Emm-Paper {
+  h5,sup{
+    color: #004f6e;
+    opacity: 1 !important;
+  }
   // text-align: center;
   padding: $paddingSize;
   border-radius: 8px;
