Fix missing modal link

--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -111,6 +111,9 @@ $ssc-picker-height: 150px;
         background-color: #e8e8e8;
         padding: 16px;
     }
+    .efficiency-picker-container{
+        position: relative;
+    }
 
     .efficiency-card.MuiCard-root {
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
